--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>📊 Chuks Isaac  <br />
-							Data Analyst Portfolio</h1>
+						<h2>📊 Chuks Isaac  <br />
+							Data Analyst Portfolio</h2>
 						<!-- <p class="skills">SQL | Python | Tableau | Excel | Power BI | Power Apps</p> -->
 						<p class="skills">
 							<a href="ETL.html">ETL/Data Cleaning</a> | 
@@ -28,7 +28,9 @@
 							<a href="powerapps.html">Power APP </a>
 						  </p>
 						<p>
-							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools. I leverage my expertise in SQL and Python for robust data modeling, while harnessing Tableau, Power BI, Excel, and Power Apps to deliver clear, dynamic visualizations and efficient business solutions.
+							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools.
+							I leverage my expertise in SQL and Python for robust data modeling, while harnessing Tableau, Power BI, Excel, and Power Apps to deliver clear, 
+							dynamic visualizations and efficient business solutions.
 						</p>
 						
 						<p>
@@ -41,7 +43,7 @@
 				
 				<!-- Header -->
 					<header id="header">
-						<a href="Index.html" class="logo">Our Services</a>
+						<a href="Index.html" class="logo"></a>
 					</header>
 
 				<!-- Nav -->
