--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="https://github.com/Softechanalytics" 
+								<a href="https://github.com/Softechanalytics/softechAnalytics.github.io" 
 								   class="icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
@@ -81,8 +81,9 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Home Page<br /></a></h2>
-									<p>The Website showcase various Data Analytics Project I have done using various data analytics tools such as ETL, Excel, SQL, Tableau, Power BI and Power Apps</p>
+									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Portfolio Projects<br /></a></h2>
+									<p>The Website showcase various Data Analytics Project I have done using various data analytics tools such as ETL, Excel, SQL, Tableau,
+										Power BI and Power Apps</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/House.jpg" alt="" /></a>
 						githu		<ul class="actions special">
