--- a/ETL.html
+++ b/ETL.html
@@ -28,11 +28,13 @@
 							<a href="powerapps.html">Power Apps</a>
 						  </p>
 						<p>
-							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools. I leverage my expertise in SQL and Python for robust data modeling, while harnessing Tableau, Power BI, Excel, and Power Apps to deliver clear, dynamic visualizations and efficient business solutions.
+							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools. 
+				I leverage my expertise in SQL and Python for robust data modeling, while harnessing Tableau, Power BI, Excel, and Power Apps to deliver clear,
+				dynamic visualizations and efficient business solutions.
 						</p>
 						<p>
 							<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409" target="_blank">Connect with me on LinkedIn @ChuksIsaac</a>
-						</p>
+						</p>  
 					
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -82,7 +84,7 @@
 									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">ETL/Data Cleaning Projects<br /></a></h2>
 									<p>We would examine various Data cleaning and ETL Projects.</p>
 								</header>
-								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/dATAANALYSIS.jpg" alt="" /></a>
+								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/AnalyticPort.jpg" alt="" /></a>
 						githu		<ul class="actions special">
 									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
 								</ul>
