--- a/ETL.html
+++ b/ETL.html
@@ -85,7 +85,7 @@
 									<p>We would examine various Data cleaning and ETL Projects.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/AnalyticPort.jpg" alt="" /></a>
-						githu		<ul class="actions special">
+								<ul class="actions special">
 									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
