--- a/ETL.html
+++ b/ETL.html
@@ -67,7 +67,7 @@
 							</li>
 							<li>
 								<a href="https://github.com/Softechanalytics" 
-								   class="icon brands alt fa-github">
+								   class=" icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
 							</li>
@@ -78,14 +78,14 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<article class=" post featured">
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics/DWH/blob/main/README.md">ETL/Data Cleaning Projects<br /></a></h2>
 									<p>We would examine various Data cleaning and ETL Projects.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/DWH/blob/main/README.md" class="image main"><img src="images/AnalyticPort.jpg" alt="" /></a>
-								<ul class="actions special">
+								<ul class=" actions special">
 									<li><a href="https://github.com/Softechanalytics/DWH/blob/main/README.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
@@ -142,7 +142,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="https://github.com/Softechanalytics" 
+										<a href="https://github.com/Softechanalytics/softechAnalytics.github.io" 
 										   class="icon brands alt fa-github">
 											<span class="label">GitHub</span>
 										</a>
