--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<p>The Website showcase various Data Analytics Project I have done using various data analytics tools such as ETL, Excel, SQL, Tableau,
 										Power BI and Power Apps</p>
 								</header>
-								<a href="https://github.com/Softechanalytics/softechAnalytics.github.io" class="image main"><img src="images/AnalyticPort.jpg" alt="" /></a>
+								<a href="https://github.com/Softechanalytics/softechAnalytics.github.io" class="image main"><img src="images/man_data.jpg" alt="" /></a>
 						githu		<ul class="actions special">
 									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
 								</ul>
