--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Portfolio Projects<br /></a></h2>
+									<h2><a href="https://github.com/Softechanalytics">About me<br /></a></h2>
 									<p>The Website showcase various Data Analytics Project I have done using various data analytics tools such as ETL, Excel, SQL, Tableau,
 										Power BI and Power Apps</p>
 								</header>
-								<a href="https://github.com/Softechanalytics/softechAnalytics.github.io" class="image main"><img src="images/man_data.jpg" alt="" /></a>
+								<a href="https://github.com/Softechanalytics" class="image main"><img src="images/man_data.jpg" alt="" /></a>
 						githu		<ul class="actions special">
-									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
+									<li><a href="https://github.com/Softechanalytics" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
