--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 										Power BI and Power Apps</p>
 								</header>
 								<a href="https://github.com/Softechanalytics" class="image main"><img src="images/man_data.jpg" alt="" /></a>
-						githu		<ul class="actions special">
-									<li><a href="https://github.com/Softechanalytics" class="button large">View Project</a></li>
+								<ul class="actions special">
+									<li><a href="https://github.com/Softechanalytics" class="button large">View Profile</a></li>
 								</ul>
 							</article>
 
