--- a/ETL.html
+++ b/ETL.html
@@ -84,7 +84,7 @@
 									<h2><a href="https://github.com/Softechanalytics/DWH/blob/main/README.md">ETL/Data Cleaning Projects<br /></a></h2>
 									<p>We would examine various Data cleaning and ETL Projects.</p>
 								</header>
-								<a href="https://github.com/Softechanalytics/DWH/blob/main/README.md" class="image main"><img src="images/AnalyticPort.jpg" alt="" /></a>
+								<a href="https://github.com/Softechanalytics/DWH/blob/main/README.md" class="image main"><img src="images/Data_architect.png" alt="" /></a>
 								<ul class=" actions special">
 									<li><a href="https://github.com/Softechanalytics/DWH/blob/main/README.md" class="button large">View Project</a></li>
 								</ul>
