--- a/ETL.html
+++ b/ETL.html
@@ -82,7 +82,8 @@
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics/DWH/blob/main/README.md">ETL/Data Cleaning Projects<br /></a></h2>
-									<p>We would examine various Data cleaning and ETL Projects.</p>
+									<p>This project demonstrates a comprehensive data warehousing and analytics solution, from building a data warehouse to generating actionable insights. 
+									 it highlights industry best practices in data engineering and analytics</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/DWH/blob/main/README.md" class="image main"><img src="images/Data_architect.png" alt="" /></a>
 								<ul class=" actions special">
