--- a/ETL.html
+++ b/ETL.html
@@ -20,12 +20,12 @@
 					
 						<p class="skills">
 							<a href="index.html">ETL/Data Cleaning</a> | 
-							<a href="sql.html">SQL</a> | 
+							<a href="Sql.html">SQL</a> | 
 							<a href="python.html">Python</a> | 
-							<a href="tableau.html">Tableau</a> | 
-							<a href="excel.html">Excel</a> | 
+							<a href="Tableau.html">Tableau</a> | 
+							<a href="Excel.html">Excel</a> | 
 							<a href="powerbi.html">Power BI</a> | 
-							<a href="powerapps.html">Power Apps</a>
+							<a href="powerapp.html">Power Apps</a>
 						  </p>
 						<p>
 							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools. 
@@ -51,12 +51,12 @@
 						<ul class="links">
 							<li class="active"><a href="ETL.html">ETL</a></li>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="excel.html">Excel </a></li>
-							<li><a href="sql.html">SQL </a></li>
-							<li><a href="Python.html">Python </a></li>
+							<li><a href="Excel.html">Excel </a></li>
+							<li><a href="Sql.html">SQL </a></li>
+							<li><a href="python.html">Python </a></li>
 							<li><a href="Tableau.html">Tableau </a></li>
 							<li><a href="powerbi.html">Power_BI</a></li>
-							<li><a href="powerApp.html">Power_App</a></li>
+							<li><a href="powerapp.html">Power_App</a></li>
 						</ul>
 						<ul class="icons alt">
 							<li>
