--- a/python.html
+++ b/python.html
@@ -44,11 +44,11 @@
 							<li class="active"><a href="Python.html">Python</a></li>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="ETL.html">ETL </a></li>
-							<li><a href="sql.html">SQL </a></li>
-							<li><a href="Index.html">Home</a></li>
+							<li><a href="Sql.html">SQL </a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="Tableau.html">Tableau </a></li>
 							<li><a href="powerbi.html">Power_BI</a></li>
-							<li><a href="powerApp.html">Power_App</a></li>
+							<li><a href="powerapp.html">Power_App</a></li>
 							
 						</ul>
 						<ul class="icons alt">
