--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 						<p>
 							<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409" target="_blank">Connect with me on LinkedIn @ChuksIsaac</a>
 						</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						<!--<ul class="actions">
+							<!--<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						<!--</ul>
 					</div>
 				
 				<!-- Header -->
@@ -58,16 +58,16 @@
 							<li><a href="powerbi.html">Power_BI</a></li>
 							<li><a href="powerapp.html">Power_App</a></li>
 						</ul>
-						<ul class="icons alt">
+						<ul class=" icons alt">
 							<li>
 								<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409/?trk=nav_responsive_tab_profile_pic" 
-								   class="icon brands alt fa-linkedin">
+								   class=" icon brands alt fa-linkedin">
 									<span class="label">LinkedIn</span>
 								</a>
 							</li>
 							<li>
 								<a href="https://github.com/Softechanalytics/softechAnalytics.github.io" 
-								   class="icon brands alt fa-github">
+								   class=" icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
 							</li>
@@ -82,7 +82,7 @@
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics">About me<br /></a></h2>
-									<p>The Website showcase various Data Analytics Project I have done using various data analytics tools such as ETL, Excel, SQL, Tableau,
+									<p>The Website showcases various Data Analytics projects I have done using various data analytics tools such as ETL, Excel, SQL, Tableau,
 										Power BI and Power Apps</p>
 								</header>
 								<a href="https://github.com/Softechanalytics" class="image main"><img src="images/man_data.jpg" alt="" /></a>
