--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 						<p>
 							<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409" target="_blank">Connect with me on LinkedIn @ChuksIsaac</a>
 						</p>
-						<!--<ul class="actions">
-							<!--<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						<!--</ul>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
 					</div>
 				
 				<!-- Header -->
