--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					</div>
 				
 				<!-- Header -->
-					<!--<header id="header">
-						<!--<a href="Index.html" class="logo"></a>
-					<!--</header>
+					<header id="header">
+						<a href="Index.html" class="logo"></a>
+					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
