--- a/Excel.html
+++ b/Excel.html
@@ -54,13 +54,13 @@
 						<ul class="icons alt">
 							<li>
 								<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409/?trk=nav_responsive_tab_profile_pic" 
-								   class="icon brands alt fa-linkedin">
+								   class=" icon brands alt fa-linkedin">
 									<span class="label">LinkedIn</span>
 								</a>
 							</li>
 							<li>
 								<a href="https://github.com/Softechanalytics" 
-								   class="icon brands alt fa-github">
+								   class=" icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
 							</li>
@@ -71,11 +71,12 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<article class=" post featured">
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Excel Sample Project<br /></a></h2>
-									<p>in this project EXCEL Project.</p>
+									<p>This Excel Portfolio Project demonstrates my skills in data cleaning, data analysis, visualization, and reporting using Microsoft Excel. 
+									The project involves comprehensive data manipulation and insightful visual presentations to support decision-making..</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/EXCEL.jpg" alt="" /></a>
 						githu		<ul class="actions special">
