--- a/Excel.html
+++ b/Excel.html
@@ -76,10 +76,10 @@
 									
 									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Excel Sample Project<br /></a></h2>
 									<p>This Excel Portfolio Project demonstrates my skills in data cleaning, data analysis, visualization, and reporting using Microsoft Excel. 
-									The project involves comprehensive data manipulation and insightful visual presentations to support decision-making..</p>
+									The project involves comprehensive data manipulation and insightful visual presentations to support decision-making.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/excel.jpg" alt="" /></a>
-						githu		<ul class="actions special">
+								<ul class="actions special">
 									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
