--- a/Tableau.html
+++ b/Tableau.html
@@ -75,7 +75,8 @@
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">Tableau Data Analyst Project Samples<br /></a></h2>
-									<p>in this project we clean housing data in SQL Server.</p>
+									<p>This portfolio demonstrates an end-to-end A/B Testing analysis conducted for the Food and Drink banner design on the landing page of GLOBOX's e-commerce mobile application. 
+									   The primary goal was to evaluate whether the new banner significantly impacts user behavior and increases key business metrics, including revenue, feasibility, and product awareness.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/Tableau-.jpg" alt="" /></a>
 						githu		<ul class="actions special">
