--- a/Tableau.html
+++ b/Tableau.html
@@ -78,9 +78,9 @@
 									<p>This portfolio demonstrates an end-to-end A/B Testing analysis conducted for the Food and Drink banner design on the landing page of GLOBOX's e-commerce mobile application. 
 									   The primary goal was to evaluate whether the new banner significantly impacts user behavior and increases key business metrics, including revenue, feasibility, and product awareness.</p>
 								</header>
-								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/Tableau-.jpg" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/chukwuemeka.isaac.anyakwu/viz/GloboxProjectChuksIsaac/Globox?publish=yes" class="image main"><img src="images/Tableau-.jpg" alt="" /></a>
 						githu		<ul class="actions special">
-									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
+									<li><a href="https://public.tableau.com/app/profile/chukwuemeka.isaac.anyakwu/viz/GloboxProjectChuksIsaac/Globox?publish=yes" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
