--- a/python.html
+++ b/python.html
@@ -77,7 +77,7 @@
 									<p>in this project we clean housing data in SQL Server.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/python.webp" alt="" /></a>
-						githu		<ul class="actions special">
+						click		<ul class="actions special">
 									<li><a href="https://github.com/Softechanalytics/Covid-19SQL/edit/main/README.md" class="button large">View Project</a></li>
 								</ul>
 							</article>
@@ -87,12 +87,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">MovieLens Exploratory<br />
+										 Data Analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<p>A data exploration project using the popular MovieLens dataset — originally compiled by the GroupLens Research Group at the University of Minnesota. This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
+									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
