--- a/python.html
+++ b/python.html
@@ -90,7 +90,7 @@
 										<h2><a href="#">Movie Lens Exploratory<br />
 										 Data Analysis</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/movieslens.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/movieslens.jpg" alt="" /></a>
 									<p>A data exploration project using the popular MovieLens dataset — originally compiled by the GroupLens Research Group at the University of Minnesota. This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
 									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
