--- a/python.html
+++ b/python.html
@@ -91,9 +91,9 @@
 										 Data Analysis</a></h2>
 									</header>
 									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/movieslens.jpg" alt="" /></a>
-									<p>A data exploration project using the popular MovieLens dataset — originally compiled by the GroupLens Research Group at the University of Minnesota. This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
+									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota. This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
 									<ul class=" actions special">
-										<li><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="button">View Project</a></li>
+										<li><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/foundation%20for%20AIML%20Project1_isaacanyakwu.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
