--- a/python.html
+++ b/python.html
@@ -50,16 +50,16 @@
 							<li><a href="powerapp.html">Power_App</a></li>
 							
 						</ul>
-						<ul class="icons alt">
+						<ul class=" icons alt">
 							<li>
 								<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409/?trk=nav_responsive_tab_profile_pic" 
-								   class="icon brands alt fa-linkedin">
+								   class=" icon brands alt fa-linkedin">
 									<span class="label">LinkedIn</span>
 								</a>
 							</li>
 							<li>
 								<a href="https://github.com/Softechanalytics" 
-								   class="icon brands alt fa-github">
+								   class=" icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
 							</li>
@@ -70,11 +70,11 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<article class=" post featured">
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" Python Data Analyst Project Samples<br /></a></h2>
-									<p>in this project we clean housing data in SQL Server.</p>
+									<p> In this project, we clean housing data in SQL Server.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/python.webp" alt="" /></a>
 						click		<ul class="actions special">
@@ -102,9 +102,9 @@
 										<h2><a href="Personal Banking Load Campaign"><br />
 										Supervised Learning</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/loan.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
