--- a/python.html
+++ b/python.html
@@ -15,25 +15,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-<!--
-				 Intro 
-					<div id="intro">
-						<h1>📊 Chuks Isaac  <br />
-							Data Analyst Portfolio</h1>
-						<p class="skills">SQL | Python | Tableau | Excel | Power BI | Power Apps</p>
-						<p>
-							Passionate Data Analyst skilled at turning data into actionable insights using advanced analytics, visualization, and automation tools. I leverage my expertise in SQL and Python for robust data modeling, while harnessing Tableau, Power BI, Excel, and Power Apps to deliver clear, dynamic visualizations and efficient business solutions.
-						</p>
-						<p>
-							<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409" target="_blank">Connect with me on LinkedIn @ChuksIsaac</a>
-						</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
-				-->
-				<!-- Header -->
+			
 					<header id="header">
 						<a href="python.html" class="logo">Python Project</a>
 					</header>
@@ -104,7 +86,8 @@
 										"Supervised Learning"</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/loan.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota.
+										This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
 									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
