--- a/python.html
+++ b/python.html
@@ -82,8 +82,8 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md">Movie Lens Exploratory<br />
-										 Data Analysis</a></h2>
+										<h2><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md">Personal Banking Loan<br />
+										 Supervised Learning</a></h2>
 									</header>
 									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/movieslens.jpg" alt="" /></a>
 									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota.
