--- a/python.html
+++ b/python.html
@@ -12,6 +12,13 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+<style>
+  .uniform-image {
+    width: 200px;
+    height: 150px;
+    object-fit: cover; /* keeps aspect ratio while filling the box */
+  }
+</style>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -72,7 +79,7 @@
 										<h2><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md">Movie Lens Exploratory<br />
 										 Data Analysis</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/lens.jpg" style="width:200px; height:150px;"/></a>
+									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/lens.jpg" class="uniform-image"></a>
 									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota.
 										This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
 									<ul class=" actions special">
@@ -85,7 +92,7 @@
 										<h2><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md">Personal Banking Loan<br />
 										 Supervised Learning</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/small-personal-loans.jpg" style="width:200px; height:150px;"/></a>
+									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
 									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota.
 										This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
 									<ul class=" actions special">
