--- a/python.html
+++ b/python.html
@@ -93,8 +93,8 @@
 										 Supervised Learning</a></h2>
 									</header>
 									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
-									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota.
-										This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
+									<p> This project focuses on predicting the likelihood of a liable customer opting for a personal loan. Thera Bank wants to improve the targeting strategy of its marketing campaigns, 
+									maximizing conversion rates while minimizing campaign costs. Using customer demographic and behavioral data, we build a logistic regression model to identify potential personal loan buyers..</p>
 									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
