--- a/python.html
+++ b/python.html
@@ -94,7 +94,7 @@
 									</header>
 									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
 									<p> This project focuses on predicting the likelihood of a liable customer opting for a personal loan. Thera Bank wants to improve the targeting strategy of its marketing campaigns, 
-									maximizing conversion rates while minimizing campaign costs. Using customer demographic and behavioral data, we build a logistic regression model to identify potential personal loan buyers..</p>
+									maximizing conversion rates while minimizing campaign costs.</p>
 									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
