--- a/python.html
+++ b/python.html
@@ -92,7 +92,7 @@
 										<h2><a href="https://github.com/Softechanalytics/SupervisedLearning/blob/main/README.md">Personal Banking Loan<br />
 										 Supervised Learning</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/SupervisedLearning/blob/main/README.md"><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
+									<a href="""><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
 									<p> This project focuses on predicting the likelihood of a liable customer opting for a personal loan. Thera Bank wants to improve the targeting strategy of its marketing campaigns, 
 									maximizing conversion rates while minimizing campaign costs.</p>
 									<ul class=" actions special">
