--- a/python.html
+++ b/python.html
@@ -79,7 +79,7 @@
 										<h2><a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md">Movie Lens Exploratory<br />
 										 Data Analysis</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/MoviesProject_Python/blob/main/README.md" class="image fit"><img src="images/lens.jpg" class="uniform-image"></a>
+									<a href=""><img src="images/lens.jpg" class="uniform-image"></a>
 									<p>A data exploration project using the popular MovieLens dataset, originally compiled by the GroupLens Research Group at the University of Minnesota.
 										This project demonstrates core data wrangling, visualization, and exploratory data analysis (EDA) skills using Python.</p>
 									<ul class=" actions special">
@@ -92,7 +92,7 @@
 										<h2><a href="https://github.com/Softechanalytics/SupervisedLearning/blob/main/README.md">Personal Banking Loan<br />
 										 Supervised Learning</a></h2>
 									</header>
-									<a href="""><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
+									<a href=""><img src="images/small-personal-loans.jpg" class="uniform-image"></a>
 									<p> This project focuses on predicting the likelihood of a liable customer opting for a personal loan. Thera Bank wants to improve the targeting strategy of its marketing campaigns, 
 									maximizing conversion rates while minimizing campaign costs.</p>
 									<ul class=" actions special">
