--- a/python.html
+++ b/python.html
@@ -94,12 +94,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Credit Card Customer Segmentation<br />
+										Clustering Project</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<p>This project leverages Unsupervised Learning (Clustering) to perform customer segmentation for AllLife Bank's credit card customers. 
+										The goal is to identify meaningful customer segments based on their behavior and interactions with the bank.</p>
+									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
