--- a/python.html
+++ b/python.html
@@ -97,7 +97,7 @@
 										<h2><a href="#">Credit Card Customer Segmentation<br />
 										Clustering Project</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/creditcard.jpeg" class="uniform-image"></a>
 									<p>This project leverages Unsupervised Learning (Clustering) to perform customer segmentation for AllLife Bank's credit card customers. 
 										The goal is to identify meaningful customer segments based on their behavior and interactions with the bank.</p>
 									<ul class=" actions special">
