--- a/python.html
+++ b/python.html
@@ -107,13 +107,14 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md">Bank Churn Prediction<br />
+										Neural Network Project</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+									<a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>This project applies a neural network classifier to predict customer churn — whether a customer will leave the bank — using historical customer data. 
+										Predictive insights generated here are key to helping banks improve customer retention by identifying churn risks early</p>
+									<ul class=" actions special">
+										<li><a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
