--- a/python.html
+++ b/python.html
@@ -110,7 +110,7 @@
 										<h2><a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md">Bank Churn Prediction<br />
 										Neural Network Project</a></h2>
 									</header>
-									<a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md" class="image fit"><img src="images/churn2.jpg" class="uniform-image"></a>
 									<p>This project applies a neural network classifier to predict customer churn — whether a customer will leave the bank — using historical customer data. 
 										Predictive insights generated here are key to helping banks improve customer retention by identifying churn risks early</p>
 									<ul class=" actions special">
