--- a/python.html
+++ b/python.html
@@ -108,7 +108,8 @@
 									<header>
 										
 										<h2><a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md">Bank Churn Prediction<br />
-										Neural Network Project</a></h2>
+										Neural Network 
+											Project</a></h2>
 									</header>
 									<a href="https://github.com/Softechanalytics/BankChurnPrediction/blob/main/README.md" class="image fit"><img src="images/churn2.jpg" class="uniform-image"></a>
 									<p>This project applies a neural network classifier to predict customer churn — whether a customer will leave the bank — using historical customer data. 
