--- a/python.html
+++ b/python.html
@@ -94,8 +94,8 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Softechanalytics/Unsupervised_learning/blob/main/README.md">Credit Card Customer Segmentation<br />
-										Clustering Project</a></h2>
+										<h2><a href="https://github.com/Softechanalytics/Unsupervised_learning/blob/main/README.md">Credit Card <br />
+										Customer Segmentation</a></h2>
 									</header>
 									<a href="https://github.com/Softechanalytics/Unsupervised_learning/blob/main/README.md" class="image fit"><img src="images/creditcard.jpeg" class="uniform-image"></a>
 									<p>This project leverages Unsupervised Learning (Clustering) to perform customer segmentation for AllLife Bank's credit card customers. 
