--- a/Sql.html
+++ b/Sql.html
@@ -41,26 +41,26 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="SQL.html">SQL</a></li>
+							<li class="active"><a href="Sql.html">SQL</a></li>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="ETL.html">ETL </a></li>
 							<li><a href="EXCEL.html">Excel </a></li>
-							<li><a href="Python.html">Python </a></li>
+							<li><a href="python.html">Python </a></li>
 							<li><a href="Tableau.html">Tableau </a></li>
 							<li><a href="powerbi.html">Power_BI</a></li>
-							<li><a href="powerApp.html">Power_App</a></li>
+							<li><a href="powerapp.html">Power_App</a></li>
 							
 						</ul>
-						<ul class="icons alt">
+						<ul class=" icons alt">
 							<li>
 								<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409/?trk=nav_responsive_tab_profile_pic" 
-								   class="icon brands alt fa-linkedin">
+								   class= "icon brands alt fa-linkedin">
 									<span class="label">LinkedIn</span>
 								</a>
 							</li>
 							<li>
 								<a href="https://github.com/Softechanalytics" 
-								   class="icon brands alt fa-github">
+								   class=" icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
 							</li>
@@ -71,11 +71,11 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<article class=" post featured">
 								<header class="major">
 									
 									<h2><a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md">SQL Data Analyst Project Samples<br /></a></h2>
-									<p>in this project we clean housing data in SQL Server.</p>
+									<p>in this project,t we clean housing data in SQL Server.</p>
 								</header>
 								<a href="https://github.com/Softechanalytics/Film_Lens_Dashboard/blob/main/README.md" class="image main"><img src="images/SQL.WEBP" alt="" /></a>
 						githu		<ul class="actions special">
