--- a/Excel.html
+++ b/Excel.html
@@ -44,11 +44,11 @@
 						<ul class="links">
 							<li class="active"><a href="Excel.html">Excel</a></li>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="ETL.html">ETL </a></li>
-							<li><a href="Sql.html">SQL </a></li>
-							<li><a href="python.html">Python </a></li>
-							<li><a href="Tableau.html">Tableau </a></li>
-							<li><a href="powerbi.html">Power_BI</a></li>
+							<li><a href="ETL.html">ETL</a></li>
+							<li><a href="Sql.html">SQL</a></li>
+							<li><a href="python.html">Python</a></li>
+							<li><a href="Tableau.html">Tableau</a></li>
+							<li><a href="powerbi.html">Power-BI</a></li>
 							<li><a href="powerapp.html">Power_App</a></li>
 						</ul>
 						<ul class=" icons alt">
