--- a/Tableau.html
+++ b/Tableau.html
@@ -45,22 +45,22 @@
 							<li class="active"><a href="tableau.html">tableau</a></li>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="ETL.html">ETL </a></li>
-							<li><a href="sql.html">SQL </a></li>
-							<li><a href="Python.html">Python </a></li>
+							<li><a href="Sql.html">SQL </a></li>
+							<li><a href="python.html">Python </a></li>
 							<li><a href="Excel.html">Excel </a></li>
 							<li><a href="powerbi.html">Power_BI</a></li>
-							<li><a href="powerApp.html">Power_App</a></li>
+							<li><a href="powerapp.html">Power_App</a></li>
 						</ul>
-						<ul class="icons alt">
+						<ul class=" icons alt">
 							<li>
 								<a href="https://www.linkedin.com/in/chukwuemekaanyakwu2409/?trk=nav_responsive_tab_profile_pic" 
-								   class="icon brands alt fa-linkedin">
+								   class= "icon brands alt fa-linkedin">
 									<span class="label">LinkedIn</span>
 								</a>
 							</li>
 							<li>
 								<a href="https://github.com/Softechanalytics" 
-								   class="icon brands alt fa-github">
+								   class=" icon brands alt fa-github">
 									<span class="label">GitHub</span>
 								</a>
 							</li>
