--- a/python.html
+++ b/python.html
@@ -121,12 +121,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<h2><a href="#">Plant Seedlings Image Classification<br />
+										using CNNs</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<a href="#" class="image fit"><img src="images/nlp.jpg" class="uniform-image"></a>
+									<p>A deep learning project to classify images of plant seedlings into one of 12 species using Convolutional Neural Networks (CNNs) in Keras. 
+										This work is inspired by a Kaggle challenge and built as part of a learning module provided by Great Learning.</p>
+									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
