--- a/python.html
+++ b/python.html
@@ -134,12 +134,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<h2><a href="#">Twitter US Airline<br />
+										Sentiment Analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<p>A Natural Language Processing (NLP) project focused on analyzing and classifying public sentiment from tweets directed at major U.S. airlines. 
+									    This project explores the process of preprocessing tweets, extracting features using vectorization methods, and training classification models to understand public opinion in real time.</p>
+									<ul class=" actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
