--- a/python.html
+++ b/python.html
@@ -137,7 +137,7 @@
 										<h2><a href="#">Twitter US Airline<br />
 										Sentiment Analysis</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/airline.jpg" class="uniform-image"></a>
 									<p>A Natural Language Processing (NLP) project focused on analyzing and classifying public sentiment from tweets directed at major U.S. airlines. 
 									    This project explores the process of preprocessing tweets, extracting features using vectorization methods, and training classification models to understand public opinion in real time.</p>
 									<ul class=" actions special">
